[package]
name = "proves"
version = "0.1.0"
edition = "2021"

[dependencies]
group = { path = "../group" }
tom256 = { path = "../tom256" }
p256-arithmetic = { path = "../p256-arithmetic" }
sha2 = "0.10.8"
crypto-bigint = { version = "0.6.0-rc.6", features = ["alloc", "serde"] }
rand = "0.8.5"
rayon = "1.10.0"

[dev-dependencies]
p256 = { version = "0.13.2", features = ["expose-field"] }
rand = "0.8.5"
